Fix some ugly spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -23,4 +23,5 @@ img.logo {
 body {
   padding-top: 20px;
   font-family: sans-serif;
+  overflow-y: scroll;
 }
